kernel/defs.h

struct buf;
struct pipe;
struct spinlock;
struct stat;
// exec.c
int             exec(char*, char**);
// printf.c
int            printf(char*, ...) __attribute__ ((format (printf, 1, 2)));
void            exit(int);
int             fork(void);
int             kill(int);
void            sleep(void*, struct spinlock*);
int             wait(uint64);
// string.c
int             memcmp(const void*, const void*, uint);
void*           memmove(void*, const void*, uint);
void*           memset(void*, int, uint);
int             strlen(const char*);